# DL-skills-manager

./: .gitignore  README.md  pyproject.toml
src/dl_skills_manager/: __init__.py  __main__.py  cli.py
src/dl_skills_manager/core/: __init__.py  config.py  exceptions.py  linker.py  manifest.py  types.py
src/dl_skills_manager/core/commands/: __init__.py  _shared.py  bump.py  create.py  init.py  install.py  list.py  mklink.py  mtp.py  remove.py  status.py  update.py  verify.py  versions.py
tests/: conftest.py  test_helpers.py
tests/integration/: test_full_workflow.py
tests/unit/: test___main__.py  test_commands__shared.py  test_commands_bump.py  test_commands_create.py  test_commands_init.py  test_commands_install.py  test_commands_list.py  test_commands_mklink.py  test_commands_mtp.py  test_commands_remove.py  test_commands_shared_advanced.py  test_commands_status.py  test_commands_update.py  test_commands_verify.py  test_commands_versions.py  test_config.py  test_linker.py  test_manifest.py
