[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dl-skills-manager"
version = "0.1.0"
description = "Claude Code Skills Manager - Centralized skill repository with on-demand linking"
requires-python = ">=3.14"
license = {text = "MIT"}
readme = "README.md"
keywords = ["claude", "skills", "manager", "cli"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "DL Skills Manager" },
]
dependencies = [
    "tomli-w>=1.0.0",
    "click>=8.1.0",
    "packaging>=24.0",
]

[project.scripts]
skill-sync = "dl_skills_manager.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["__pycache__", ".git", "build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # type-checking blocks
    "RUF",    # Ruff-specific rules
    "B028",   # no-explicit-stacklevel
    "T20",    # flake8-print
    "PGH",    # pygrep-hooks
    "DTZ",    # flake8-datetimez
    "ERA",    # eradicate (dead code)
    "S",      # flake8-bandit (security)
    "FBT",    # flake8-builtins
]
# TC003: import missing from dependency groups - we use dependency-groups for dev tools
ignore = [
    "TC003",
    "SIM108",  # ternary operator can be simplified - too aggressive for this codebase
    "DTZ011",  # date.today() usage - we intentionally use date only for version strings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli_w.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "packaging.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
addopts = "-v --tb=short --cov=src"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
